--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Articles</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="public/stylesheets/bootstrap.css">
 </head>
 <body ng-app="App">
 <div class="container">
@@ -13,13 +13,13 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="public/js/jquery-1.11.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="js/angular.min.js"></script>
-<script src="js/angular-route.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/controller.js"></script>
-<script src="js/service.js"></script>
-<script src="js/dirPagination.js"></script>
+<script src="public/js/angular.min.js"></script>
+<script src="public/js/angular-route.min.js"></script>
+<script src="public/js/app.js"></script>
+<script src="public/js/controller.js"></script>
+<script src="public/js/service.js"></script>
+<script src="public/js/dirPagination.js"></script>
 </body>
 </html>
